--- a/easel/index.html
+++ b/easel/index.html
@@ -3,24 +3,17 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src="easeljs-0.8.1.min.js"></script>
-    <style>
-        #frame{
-            position: relative;
-            text-align: center;
-            margin-top: 100px;
-            cursor:none;
-        }
-    </style>
-
+    <script type="text/javascript" src="easeljs-0.8.1.min.js"></script>
+    <script type="text/javascript" src="soundjs-0.6.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div id = "frame">
-        <canvas id="gameView" width="800px" height="500px" style="background-color: #000;"></canvas>
+        <div id="inner">
+            <canvas id="gameView" width="800px" height="500px" style="background-color: #000;"></canvas>
+            <div id="start"><a>Start</a></div>
+        </div>
     </div>
     <script src="app1.js"></script>
-    <audio autoplay="autoplay" loop="loop">
-        <source src="music.mp3" type="audio/mp3"/>
-    </audio>
 </body>
 </html>
