--- a/easel/index.html
+++ b/easel/index.html
@@ -3,8 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script type="text/javascript" src="easeljs-0.8.1.min.js"></script>
-    <script type="text/javascript" src="soundjs-0.6.1.min.js"></script>
+    <script type="text/javascript" src="js/easeljs-0.8.1.min.js"></script>
+    <script type="text/javascript" src="js/soundjs-0.6.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -14,6 +14,6 @@
             <div id="start"><a>Start</a></div>
         </div>
     </div>
-    <script src="app1.js"></script>
+    <script src="js/app1.js"></script>
 </body>
 </html>
